changed the mine reseting to use BukkitRunnable so it can only do 1000 blocks per tick os the server doesnt lagg out for 6 secound while the mines are reseting